# bookstore

./: .dockerignore  .gitignore  Dockerfile  Procfile  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  heroku-deploy.yml
bookstore/: settings.py  urls.py
product/: factories.py  models.py  serializers.py
product/migrations/: 0001_initial.py  0002_alter_product_options.py
product/tests/: test_product.py
